Added static assets

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Sushi Avenue</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="/js/app.js"></script>
   </head>
   <body>
     <h1>Sushi Avenue</h1>
