--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>Sushi Avenue</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <script src="/angular/angular.min.js"></script>
     <script src="/js/app.js"></script>
   </head>
-  <body>
+  <body data-ng-app="sushiAvenue">
     <h1>Sushi Avenue</h1>
   </body>
 </html>
