--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <title>Sushi Avenue</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/angular/angular.min.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/js/app.js"></script>
+    <base href="/" />
   </head>
   <body data-ng-app="sushiAvenue">
     <h1>Sushi Avenue</h1>
+    <div data-ui-view><div>
   </body>
 </html>
