Added basic controllers

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <base href="/" />
   </head>
   <body data-ng-app="sushiAvenue">
-    <h1>Sushi Avenue</h1>
+    <h1><a data-ui-sref="productsIndex">Sushi Avenue</a></h1>
     <div data-ui-view><div>
   </body>
 </html>
